# axum_tutorial

./: Cargo.toml  LICENSE
src/: main.rs
static/: hello.html
