[package]
name = "axum_tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.11"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
